--- a/src/main/resources/Test_Data/Framework.properties
+++ b/src/main/resources/Test_Data/Framework.properties
@@ -1,5 +1,6 @@
 URL: https://qa.botvfx.com/login
 UserName:
 Exection_Sheet_Location: C:\\Users\\Shanmugasundharam\\Git\\S2_Application\\Selenium\\src\\main\\resources\\Data_Engine\\Driver_File.xlsx
+Screen_Shot_Folder_Location: C:\\Users\\Shanmugasundharam\\Git\\S2_Application\\Selenium\\test-output\\ScreenShot
 Browser: chrome
 HeadLess_Mode: No
