--- a/src/main/resources/Test_Data/Framework.properties
+++ b/src/main/resources/Test_Data/Framework.properties
@@ -1,6 +1,7 @@
-URL: https://qa.botvfx.com/login
+URL:https://s2-dev.botvfx.com/login
 UserName:
-Exection_Sheet_Location: C:\\Users\\Shanmugasundharam\\Git\\S2_Application\\Selenium\\src\\main\\resources\\Data_Engine\\Driver_File.xlsx
-Screen_Shot_Folder_Location: C:\\Users\\Shanmugasundharam\\Git\\S2_Application\\Selenium\\test-output\\ScreenShot
+Exection_Sheet_Location: C:\\Users\\Shanmugasundharam\\GitHub\\Automation_With_Selenium_Java\\src\\main\\resources\\Data_Engine\\Driver_File.xlsx
+Screen_Shot_Folder_Location: C:\\Users\\Shanmugasundharam\\GitHub\\Automation_With_Selenium_Java\\test-output\\ScreenShot
+Web_Elements_Location: C:\\Users\\Shanmugasundharam\\GitHub\\Automation_With_Selenium_Java\\src\\main\\resources\\Test_Data\\Web_Elements\\
 Browser: chrome
 HeadLess_Mode: No
