--- a/src/main/resources/Test_Data/Framework.properties
+++ b/src/main/resources/Test_Data/Framework.properties
@@ -1,4 +1,4 @@
-URL:https://s2-dev.botvfx.com/login
+URL:
 UserName:
 Exection_Sheet_Location: C:\\Users\\Shanmugasundharam\\GitHub\\Automation_With_Selenium_Java\\src\\main\\resources\\Data_Engine\\Driver_File.xlsx
 Screen_Shot_Folder_Location: C:\\Users\\Shanmugasundharam\\GitHub\\Automation_With_Selenium_Java\\test-output\\ScreenShot
